--- a/new/index.html
+++ b/new/index.html
@@ -13,7 +13,7 @@
     <h1 class="page-title">Link Downloader</h1>
     <main>
         <form id="links-form">
-            <textarea placeholder="Direct download links or links to text files with download links" name="text-input" cols="30" rows="10"></textarea>
+            <textarea placeholder="Direct download links or links to text files with download links" name="text-input" cols="30" rows="10" class="download-links-textarea"></textarea>
             <div class="separator">and/or</div>
             <input name="file-input" type="file" multiple accept="text/plain">
             <button type="submit">Download</button>
