Add visualizer, kinda working

--- a/new/index.html
+++ b/new/index.html
@@ -19,7 +19,9 @@
             <button type="submit">Download</button>
         </form>
         <div class="separator">Total Progress</div>
+        <div id="total-progress-container" class="progress-total progress-container"></div>
         <div class="separator">Preview</div>
+        <div id="downloads-progress-container" class="progress-container"></div>
     </main>
 </body>
 </html>
